feat: Javaのエラー The constructor URL(String) is deprecated since version 20Java